arr-stack/raw/webdav/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdav
  template:
    metadata:
      labels:
        app: webdav
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: autocaliweb
              topologyKey: kubernetes.io/hostname
      containers:
        - name: webdav
          image: ghcr.io/hacdias/webdav:v5
          args: ["-c", "/etc/webdav/config.yml"]
          ports:
            - containerPort: 6065
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/webdav
            - name: library
              mountPath: /data
              readOnly: true
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: webdav-config
        - name: library
          persistentVolumeClaim:
            claimName: books-longhorn-rwo
---
apiVersion: v1
kind: Service
metadata:
  name: webdav
  namespace: media
spec:
  selector:
    app: webdav
  ports:
    - name: http
      port: 6065
      targetPort: 6065
